--- a/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
@@ -43,7 +43,7 @@
             </StackPanel>
 
             <Button Content="添加本地文件" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="88" Height="28" Margin="5,5,15,0" Click="btnAddDynamicWallpaper_Click"/>
-            <Button Content="导入B站视频" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="88" Height="28" Margin="5,5,115,0" Click="btnAddDynamicWallpaper_Click"/>
+            <Button Content="导入B站视频" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="88" Height="28" Margin="5,5,115,0" Click="btnImportBilibili_Click"/>
         </Grid>
     </Grid>
 </Page>
