--- a/Master-Zhao/Master-Zhao.Shell/Windows/BilibiliDownloader.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Windows/BilibiliDownloader.xaml
@@ -32,7 +32,7 @@
                 </Grid.ColumnDefinitions>
                 <Label Content="请输入B站链接" Margin="5"/>
                 <TextBox Margin="5" Grid.Column="1" VerticalContentAlignment="Center"/>
-                <Button Grid.Column="2" Content="解析" Width="88" Height="28"/>
+                <Button Grid.Column="2" Content="解析" Width="88" Height="28" Style="{StaticResource ButtonStyle}"/>
             </Grid>
 
             <GroupBox Grid.Row="1" BorderThickness="0" Header="预览">
