--- a/Master-Zhao/Master-Zhao.Shell/Pages/DesktopSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/DesktopSetting.xaml
@@ -21,7 +21,7 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <Button Content="返回" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40" Height="40" Click="btnReturn_Click"/>
+                <Button Content="返回" HorizontalAlignment="Left" VerticalAlignment="Top" Width="88" Height="28" Click="btnReturn_Click" Style="{StaticResource ButtonStyle}"/>
             </Grid>
 
             <StackPanel Grid.Row="1">
