--- a/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
@@ -49,7 +49,7 @@
                             <Image Grid.Row="0" Source="{Binding ImagePath,RelativeSource={RelativeSource TemplatedParent}}" HorizontalAlignment="Center" VerticalAlignment="Center"  Stretch="Uniform"></Image>
 
                             <Label Grid.Row="1" Foreground="Black" FontSize="13" Content="{Binding Title,RelativeSource={RelativeSource TemplatedParent}}" VerticalContentAlignment="Center" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" />
-                            <Label Grid.Row="2" Foreground="Silver" FontSize="11" Content="{Binding Subtitle,RelativeSource={RelativeSource TemplatedParent}}" VerticalContentAlignment="Center" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" />
+                            <Label Grid.Row="2" Foreground="Silver" FontSize="11" Content="{Binding Subtitle,RelativeSource={RelativeSource TemplatedParent}}" VerticalContentAlignment="Center" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=Content}"/>
                         </Grid>
                     </Border>
 
