--- a/Master-Zhao/Master-Zhao.Shell/Pages/DesktopBeautify.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/DesktopBeautify.xaml
@@ -27,6 +27,7 @@
             <StackPanel Grid.Row="1">
                 <ToggleButton Content="静态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StaticWallpaperClick" IsChecked="True"/>
                 <ToggleButton Content="动态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_DynamicWallpaperClick"/>
+                <ToggleButton Content="任务栏设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_TaskbarSettingClick"/>
             </StackPanel>
         </Grid>
 
