--- a/Master-Zhao/Master-Zhao.Shell/Pages/AboutPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/AboutPage.xaml
@@ -5,11 +5,73 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Master_Zhao.Shell.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="750" d:DesignWidth="800"
       Title="About">
+    <Page.Background>
+        <!--<SolidColorBrush Color="White"/>-->
+        <ImageBrush ImageSource="../Icon/about_back.jpeg" Stretch="None" Opacity=".2"/>
+    </Page.Background>
 
     <StackPanel>
-        <Label Content="关于Master-Zhao" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20"/>
-        <Label Content="此情可待成追忆，只是当时已惘然" HorizontalAlignment="Left"/>
+        <Grid Grid.Row="0">
+            <Button Content="返回" HorizontalAlignment="Left" VerticalAlignment="Top" Width="88" Height="28" Click="btnReturn_Click" Style="{StaticResource ButtonStyle}"/>
+        </Grid>
+        <Grid Margin="40,0,20,0">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Image Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Margin="10" Source="../logo.png" Width="80" HorizontalAlignment="Left"></Image>
+            <Label Content="Master-Zhao" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource AccentBaseColor}" FontWeight="Bold" FontSize="20" Grid.Column="0"/>
+            <Label Content="版本 1.0.0.1 beta1" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0"/>
+            <WrapPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center">
+                <Label Content="&#169;zhaotianff 2022 " VerticalAlignment="Center" HorizontalAlignment="Left" />
+                <Label>
+                    <Hyperlink Click="Hyperlink_Click">https://github.com/zhaotianff/Master-Zhao</Hyperlink>
+                </Label>
+            </WrapPanel>
+            <Label Content="Code licensed under GPLV3" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="3" Grid.Column="0"/>
+            <!--<Label Content="此情可待成追忆，只是当时已惘然" HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.Row="3" Grid.Column="0"/>-->
+            
+        </Grid>
+        <StackPanel Margin="40,0,20,0">
+            <Label Content="当前开发进度" Foreground="{DynamicResource AccentBaseColor}" FontWeight="Bold" FontSize="20" Margin="0,5"></Label>
+            <Label Content="目前正在开发任务栏设置，动态壁纸里导出B站视频的功能延后了，因为需要抓取B站的视频，分析接口的时间是未知的，所以往后挪一挪。"></Label>
+        </StackPanel>
+
+        <StackPanel Margin="40,0,20,0">
+            <Label Content="为什么要写这样一个软件" Foreground="{DynamicResource AccentBaseColor}" FontWeight="Bold" FontSize="20" Margin="0,5"></Label>
+            <Label Content="想起那天夕阳下的奔跑，那是我逝去的青春。哈哈"></Label>
+        </StackPanel>
+
+        <StackPanel Margin="40,0,20,0">
+            <Label Content="为什么不直接调用API函数，要再封装一层" Foreground="{DynamicResource AccentBaseColor}" FontWeight="Bold" FontSize="20" Margin="0,5"></Label>
+            <Label Content="因为目前在学习Windows编程的一些技术，所以想写些代码练习练习。其实在C#中，可以直接调用WinAPI函数的。"></Label>
+        </StackPanel>
+
+        <StackPanel Margin="40,0,20,0">
+            <Label Content="感谢" Foreground="{DynamicResource AccentBaseColor}" FontWeight="Bold" FontSize="20" Margin="0,5"></Label>
+            <Label Content="本项目参考了以下项目，感谢原项目作者的辛勤付出，在此表示感谢"></Label>
+            <ListBox Background="Transparent" HorizontalAlignment="Left" Name="list_ProjectReference" Height="200" MouseDoubleClick="list_ProjectReference_MouseDoubleClick">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <Label Content="{Binding ProjectName}" FontSize="15" FontWeight="SemiBold"/>
+                            <Label Content="{Binding ProjectUrl}"></Label>
+                            <Label Content="{Binding ProjectDescription}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+              
+            </ListBox>
+        </StackPanel>
+
     </StackPanel>
 </Page>
