--- a/Master-Zhao/Master-Zhao.Shell/Pages/TaskbarSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/TaskbarSetting.xaml
@@ -16,13 +16,13 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <GroupBox Grid.Row="0" IsEnabled="False">
+        <GroupBox Grid.Row="0">
             <GroupBox.Header>
-                <Label Content="任务栏风格(开发中)" FontSize="14"></Label>
+                <Label Content="任务栏风格" FontSize="14"></Label>
             </GroupBox.Header>
 
             <StackPanel>
-                <CheckBox Content="Windows 11风格任务栏">
+                <CheckBox Content="Windows 11风格任务栏" Name="cbx_Windows11Taskbar" IsEnabled="False" Checked="cbx_Windows11Taskbar_Checked" Unchecked="cbx_Windows11Taskbar_Unchecked">
                     <CheckBox.ToolTip>
                         <ToolTip>Windows 11风格任务栏包含开始菜单图标、开始菜单位置和任务列表位置的改变</ToolTip>
                     </CheckBox.ToolTip>
@@ -33,39 +33,43 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="1">
+        <GroupBox Grid.Row="1" Name="group_TaskbarBlur" IsEnabled="False">
             <GroupBox.Header>
                 <Label Content="任务栏透明效果" FontSize="14"></Label>
             </GroupBox.Header>
 
             <StackPanel>
                 <WrapPanel>
-                    <Label Content="模式" Margin="5"></Label>
-                    <ComboBox Width="180" Margin="5" SelectedIndex="3">
+                    <Label Content="模式" Margin="5" Visibility="Collapsed"></Label>
+                    <ComboBox Width="180" Margin="5" SelectedIndex="3" Visibility="Collapsed">
                         <ComboBoxItem>ACCENT_DISABLED</ComboBoxItem>
                         <ComboBoxItem>ACCENT_ENABLE_GRADIENT</ComboBoxItem>
                         <ComboBoxItem>ACCENT_ENABLE_TRANSPARENTGRADIENT</ComboBoxItem>
                         <ComboBoxItem>ACCENT_ENABLE_BLURBEHIND</ComboBoxItem>
                         <ComboBoxItem>ACCENT_ENABLE_ACRYLICBLURBEHIND</ComboBoxItem>
                     </ComboBox>
-                    <Button Content="启用" Name="btn_EnableBlurTaskbar" Width="88" Height="25" Style="{StaticResource ButtonStyle}" Click="btn_EnableBlurTaskbar_Click"/>
+                    <CheckBox Content="启用任务栏透明效果" Name="cbx_BlurTaskbar" Checked="btn_EnableBlurTaskbar_Click" Unchecked="btn_DisableBlurTaskbar_Click"></CheckBox>
                 </WrapPanel>
-                <Grid Height="60">
+
+                <Grid Height="60" IsEnabled="{Binding ElementName=cbx_BlurTaskbar,Path=IsChecked}">
                     <Image  Source="../Icon/windows10_blurtaskbar.png" Height="40" Stretch="UniformToFill"></Image>
                 </Grid>
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="2" IsEnabled="False">
+        <GroupBox Grid.Row="2">
             <GroupBox.Header>
                 <Label Content="开始菜单(开发中)" FontSize="14"></Label>
             </GroupBox.Header>
 
             <StackPanel>
                 <StackPanel>
-                    <CheckBox Content="使用Windows 11风格开始按钮" Style="{StaticResource CheckBoxStyle}"></CheckBox>
-                    <CheckBox Content="开始菜单透明" Style="{DynamicResource CheckBoxStyle}" Name="cbx_TransparencyStart"></CheckBox>
-                    <DockPanel IsEnabled="{Binding ElementName=cbx_TransparencyStart,Path=IsChecked}">
+                    <CheckBox Content="使用Windows 11风格开始按钮" Style="{StaticResource CheckBoxStyle}" Name="cbx_Windows11StartButton" IsEnabled="False"></CheckBox>
+                    <!--Windows 10开始菜单是一个全屏的窗口，绘制区域无法使用SetWindowCompositionAttribute函数进行透明处理-->
+                    <!--空白区域可以使用SetWindowCompositionAttribute进行透明处理，但这没啥意义。-->
+                    <!--如果要实现开始菜单透明，需要重做一个开始菜单，这个功能开发的时间比较长，留到后面的版本去实现-->
+                    <CheckBox Content="开始菜单透明" Style="{DynamicResource CheckBoxStyle}" Name="cbx_TransparencyStart" Visibility="Collapsed"></CheckBox>
+                    <DockPanel IsEnabled="{Binding ElementName=cbx_TransparencyStart,Path=IsChecked}" Visibility="Collapsed">
                         <Label Content="透明度" DockPanel.Dock="Left" Margin="5"/>
                         <Slider Value="50" Minimum="0" Maximum="100" DockPanel.Dock="Left" MaxWidth="800" Margin="10,5" Style="{DynamicResource SliderStyle}"/>
                     </DockPanel>
