--- a/Master-Zhao/Master-Zhao.Shell/Pages/OtherSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/OtherSetting.xaml
@@ -5,33 +5,166 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Master_Zhao.Shell.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="720" d:DesignWidth="1080"
       Title="OtherSetting">
 
-    <StackPanel>
-        <GroupBox Style="{StaticResource GroupBoxStyle}">
-            <GroupBox.Header>
-                <Label Content="系统图标" FontSize="14"></Label>
-                <!--图标显示--> 
-            </GroupBox.Header>
-        </GroupBox>
+    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <StackPanel>
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="桌面图标" FontSize="14"></Label>
+                    <!--图标显示-->
+                </GroupBox.Header>
 
-        <GroupBox Style="{StaticResource GroupBoxStyle}">
-            <GroupBox.Header>
-                <Label Content="桌面设置" FontSize="14"></Label>
-                <!--快捷方式键头-->
-                <!--修改系统文件夹路径 我的文档 我的图片 ...-->
-                <!--我的电脑添加快速启用项-->
-                <!--启用传统图片查看器-->
-                <!--OEM信息设置-->
-                <!--启动logo-->
-                <!--禁止系统记录使用历史记录-->
-                <!--右键菜单管理-->
-                <!--硬件信息修改-->
-                <!--桌面显示Windows版本信息-->
-                <!--任务栏缩略图窗口大小 HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced-->
-                <!--在桌面创建上帝模式文件夹-->
-            </GroupBox.Header>
-        </GroupBox>
-    </StackPanel>
+                <WrapPanel Margin="0,35,0,0">
+                    <CheckBox Content="计算机" Margin="10"/>
+                    <CheckBox Content="用户的文件" Margin="10"/>
+                    <CheckBox Content="回收站" Margin="10"/>
+                    <CheckBox Content="控制面板" Margin="10"/>
+                    <CheckBox Content="网络" Margin="10"/>
+                    <CheckBox Content="god mode" Margin="10"/>
+                </WrapPanel>
+            </GroupBox>
+
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="桌面相关设置" FontSize="14"></Label>
+
+
+
+                    <!--启动logo-->
+                    <!--右键菜单管理-->
+
+
+
+                </GroupBox.Header>
+
+                <StackPanel Margin="0,35,0,0">
+                    <StackPanel>
+                        <WrapPanel>
+                            <CheckBox Content="移除快捷方式箭头" Margin="10"/>
+
+                            <CheckBox Content="使用Windows Photo Viewer作为默认图片查看器" Margin="10"></CheckBox>
+                            <CheckBox Content="桌面显示Windows版本信息" Margin="10"></CheckBox>
+
+                            <!--禁止系统记录使用历史记录-->
+                            <CheckBox Content="禁止系统记录使用历史记录" Margin="10"></CheckBox>
+                        </WrapPanel>
+                        <WrapPanel>
+                            <!--任务栏缩略图窗口大小 HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced-->
+                            <Label Content="任务栏预览窗口大小" Margin="10"/>
+                            <TextBox Width="120" Margin="10"/>
+                            <Button Content="设置" Margin="10" Width="88" Height="28" Style="{StaticResource ButtonStyle}"/>
+                        </WrapPanel>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="系统文件夹路径修改" FontSize="14"></Label>
+                </GroupBox.Header>
+
+                <StackPanel Margin="0,35,0,0">
+                    <Grid Margin="10,5" Height="30">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="95"/>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="120"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label Content="系统文件夹" VerticalAlignment="Center"/>
+                        <ComboBox Grid.Column="1">
+                            <ComboBoxItem>保存的游戏</ComboBoxItem>
+                            <ComboBoxItem>联系人</ComboBoxItem>
+                            <ComboBoxItem>链接</ComboBoxItem>
+                            <ComboBoxItem>视频</ComboBoxItem>
+                            <ComboBoxItem>收藏夹</ComboBoxItem>
+                            <ComboBoxItem>搜索</ComboBoxItem>
+                            <ComboBoxItem>图片</ComboBoxItem>
+                            <ComboBoxItem>文档</ComboBoxItem>
+                            <ComboBoxItem>下载</ComboBoxItem>
+                            <ComboBoxItem>音乐</ComboBoxItem>
+                            <ComboBoxItem>桌面</ComboBoxItem>
+                        </ComboBox>
+                        <TextBox Margin="5,0" Grid.Column="2"/>
+                        <Button Content="修改" Grid.Column="3" Margin="10,0" Style="{StaticResource ButtonStyle}"/>
+                    </Grid>
+
+                </StackPanel>
+
+            </GroupBox>
+
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="我的电脑快速启动项" FontSize="14"></Label>
+                </GroupBox.Header>
+
+                <StackPanel Margin="0,35,0,0">
+                    <Label Content="组管理"></Label>
+                    <WrapPanel>
+                        <ComboBox Margin="10" Width="120"/>
+
+                        <Button Content="新增" Width="88" Height="28" Margin="10,0"/>
+                        <Button Content="重命名" Width="88" Height="28" Margin="10,0"/>
+                    </WrapPanel>
+
+                    <Label Content="项目管理"></Label>
+                    <ListView>
+                        <ListView.View>
+                            <GridView>
+
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+
+            </GroupBox>
+
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="OEM信息设置" FontSize="14"></Label>
+                </GroupBox.Header>
+
+                <Grid Margin="0,35,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="7*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label HorizontalAlignment="Left" Content="OEM图片设置" Margin="10"/>
+                    <TextBox Margin="10" Grid.Column="1"/>
+                    <Button Content="浏览" Grid.Column="2" Margin="10" Width="88" Height="28" Style="{StaticResource ButtonStyle}"/>
+
+                    <Button Content="保存" Width="88" Height="28" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="2" Margin="10"/>
+                </Grid>
+            </GroupBox>
+
+            <!--硬件信息修改-->
+            <GroupBox Style="{StaticResource GroupBoxStyle}">
+                <GroupBox.Header>
+                    <Label Content="硬件信息设置" FontSize="14"></Label>
+                </GroupBox.Header>
+
+                <Grid Margin="0,35,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="7*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label HorizontalAlignment="Left" Content="CPU" Margin="10"/>
+                    <TextBox Margin="10" Grid.Column="1"/>
+                    <Button Content="设置" Grid.Column="2" Margin="10" Width="88" Height="28" Style="{StaticResource ButtonStyle}"/>
+                </Grid>
+            </GroupBox>
+        </StackPanel>
+    </ScrollViewer>
 </Page>
