--- a/Master-Zhao/Master-Zhao.Shell/UserControls/DynamicWallpaperControl.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/UserControls/DynamicWallpaperControl.xaml
@@ -33,7 +33,7 @@
             <Label Name="title" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
         </Grid>
         <Grid Grid.Row="1">
-            <Button Content="预览" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="48" Height="20" Margin="0,0,55,0" Click="preview_Click"/>
+            <Button Content="预览" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="48" Height="20" Margin="0,0,55,0" Click="preview_Click" Name="btn_Preview"/>
             <Button Content="设置" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="48" Height="20" Click="set_Click"/>
         </Grid>
     </Grid>
