--- a/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
@@ -47,8 +47,8 @@
                 <Label Content="动态壁纸设置" FontWeight="Bold" FontSize="15"></Label>
                 <CheckBox Content="自动循环" Margin="5" Name="cbx_AutoRepeat" Checked="cbx_AutoRepeat_Checked" Unchecked="cbx_AutoRepeat_Unchecked"/>
                 <CheckBox Content="不允许播放背景声音" Margin="5" Name="cbx_Mute" Checked="cbx_Mute_Checked" Unchecked="cbx_Mute_Unchecked"/>
-                <CheckBox Content="保留动态壁纸" IsEnabled="False" Margin="5" ToolTip="软件退出后仍然保留动态壁纸，如果需要退出动态壁纸，再次启动软件取消此选项，然后再退出软件即可。" Name="cbx_KeepWallpaper" Checked="cbx_KeepWallpaper_Checked" Unchecked="cbx_KeepWallpaper_Unchecked"></CheckBox>
-                <CheckBox Content="开机自启动" Margin="5" Name="cbx_Startup" IsEnabled="False" Checked="cbx_Startup_Checked" Unchecked="cbx_Startup_Unchecked"></CheckBox>
+                <CheckBox Content="保留动态壁纸" Margin="5" ToolTip="软件退出后仍然保留动态壁纸，如果需要退出动态壁纸，再次启动软件取消此选项，然后再退出软件即可。" Name="cbx_KeepWallpaper" Checked="cbx_KeepWallpaper_Checked" Unchecked="cbx_KeepWallpaper_Unchecked"></CheckBox>
+                <CheckBox Content="开机自启动" Margin="5" Name="cbx_Startup" Checked="cbx_Startup_Checked" Unchecked="cbx_Startup_Unchecked"></CheckBox>
             </StackPanel>
 
             <Button Content="添加本地文件" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="88" Height="28" Margin="5,5,15,0" Style="{StaticResource ButtonStyle}" Click="btnAddDynamicWallpaper_Click"/>
