--- a/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
@@ -1,8 +1,11 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Master_Zhao.Shell.Controls">
+    xmlns:local="clr-namespace:Master_Zhao.Shell.Controls"
+    xmlns:converter="clr-namespace:Master_Zhao.Shell.Infrastructure.Converter">
 
+    <converter:CenterPointConverter x:Key="centerPointConverter"/>
+    <converter:OpacityConverter x:Key="opacityConverter"/>
 
     <Style TargetType="{x:Type local:ThumbImageControl}">
         <Setter Property="Cursor" Value="Hand"/>
@@ -59,8 +62,8 @@
                             <Setter Property="BorderBrush" Value="Silver"/>
                             <Setter Property="BorderThickness" Value="1"/>
                         </Trigger>
-                        
-                      
+
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -83,6 +86,63 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="Opacity" Value=".8"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type local:CircleButton}">
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        <Setter Property="Background" Value="Silver"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Effect">
+            <Setter.Value>
+                <DropShadowEffect BlurRadius="10" Color="Silver"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                        <Grid x:Name="grid">
+                            <Grid.Background>
+                                <SolidColorBrush Color="LightBlue" 
+                                                 Opacity="{Binding IsSelected,RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource opacityConverter}}"></SolidColorBrush>
+                            </Grid.Background>
+                            <Image Stretch="UniformToFill" Source="{Binding ImagePath,RelativeSource={RelativeSource TemplatedParent}}"/>
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Grid>
+
+                        <Border.Clip>
+                            <EllipseGeometry RadiusX="{Binding ContentRadiusX,RelativeSource={RelativeSource TemplatedParent}}"
+                                 RadiusY="{Binding ContentRadiusY,RelativeSource={RelativeSource TemplatedParent}}"
+                                 Center="{Binding Center,RelativeSource={RelativeSource TemplatedParent}}">
+                            </EllipseGeometry>
+                        </Border.Clip>
+
+                        
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource ButtonBorderColor}"/>
+                            <Setter Property="BorderThickness" TargetName="border" Value="2"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Background" TargetName="border" Value="{DynamicResource ButtonBorderColor}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="Transparent"/>
+                            <Setter Property="Padding" Value="0,1,0,0"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Background" TargetName="border" Value="{DynamicResource ButtonDisabledBackgroundColor}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource ButtonDisabledBorderColor}"/>
+                            <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{DynamicResource ButtonDisabledForegroundColor}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
