--- a/Master-Zhao/Master-Zhao.Shell/Pages/ToolsPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/ToolsPage.xaml
@@ -9,6 +9,30 @@
       Title="ToolsPage">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="9*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Button Content="返回" HorizontalAlignment="Left" VerticalAlignment="Top" Width="88" Height="28" Click="btnReturn_Click" Style="{StaticResource ButtonStyle}"/>
+            </Grid>
+
+            <StackPanel Grid.Row="1">
+                <ToggleButton Content="" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StaticWallpaperClick" IsChecked="True"/>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Frame Name="frame" Source="StaticWallpaper.xaml">
+
+            </Frame>
+        </Grid>
     </Grid>
 </Page>
