--- a/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
@@ -94,7 +94,9 @@
     </Style>
 
     <Style TargetType="{x:Type local:FastRunButton}">
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        <!--cause a bug-->
+        <!--<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>-->
+        <Setter Property="Focusable" Value="False"/>
         <Setter Property="Background" Value="Silver"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="Foreground" Value="Black"/>
