tools page default page

--- a/Master-Zhao/Master-Zhao.Shell/Pages/ToolsPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/ToolsPage.xaml
@@ -30,7 +30,7 @@
         </Grid>
 
         <Grid Grid.Column="1">
-            <Frame Name="frame" Source="FastRunSetting.xaml">
+            <Frame Name="frame">
 
             </Frame>
         </Grid>
