adjust directory structure

--- a/Master-Zhao/Master-Zhao.Shell/View/Pages/AboutPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Pages/AboutPage.xaml
@@ -9,7 +9,7 @@
       Title="About">
     <Page.Background>
         <!--<SolidColorBrush Color="White"/>-->
-        <ImageBrush ImageSource="../Icon/about_back.jpeg" Stretch="None" Opacity=".2"/>
+        <ImageBrush ImageSource="../../Icon/about_back.jpeg" Stretch="None" Opacity=".2"/>
     </Page.Background>
 
     <StackPanel>
