--- a/Master-Zhao/Master-Zhao.Shell/View/UserControls/FastRunItemConfig.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/UserControls/FastRunItemConfig.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Master_Zhao.Shell.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" MaxWidth="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -22,5 +22,8 @@
         <Label Content="命令路径:"></Label>
         <TextBox Grid.Row="0" Grid.Column="1" x:Name="tbox_Path"/>
         <Button Content="浏览" Grid.Column="2" Width="88" Click="btnBrowerPath_Click"/>
+
+        <Label Content="快捷键（暂未启用）:" Grid.Row="1" IsEnabled="False"></Label>
+        <TextBox Grid.Row="1" Grid.Column="1" IsEnabled="False"/>
     </Grid>
 </UserControl>
